c/examples/gcc/testsuite/c-c++-common/gomp/pr79428-5.c
/* PR c/79428 */
/* { dg-options "-fopenmp" } */
#pragma omp ordered /* { dg-error "expected declaration specifiers before end of line" } */
